# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
kubernetes/: e2e_test.py  pyproject.toml
kubernetes/manifests/base/backend/: service.yaml
kubernetes/manifests/base/frontend/: deployment.yaml  service.yaml
scripts/: setup_project  update_kustomize_tag
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
