[project]
name = "study-tracker-frontend"
version = "0.2.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Christopher Vestman", email = "chris@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.34.2",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "frontend"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "responses>=0.26.1",
    "ruff>=0.15.20",
]
